[package]
name = "savefile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
dialoguer = "0.10.4"
dirs = "5.0.1"
glob = "0.3.1"
notify = "6.1.1"
open = "5.0.0"
rusqlite = { version = "0.29.0", features = ["bundled", "array", "chrono"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tabled = "0.14.0"
thiserror = "1.0.48"
